fixed blog landing alignement

--- a/css/mobile.css
+++ b/css/mobile.css
@@ -201,8 +201,8 @@ button, html input[type="button"], input[type="reset"], input[type="submit"] {
   top: 0;
   left: 0;
   right: 0;
-  width: 105%;
-  height: 100%;
+/*  width: 105%;
+  height: 100%;*/
   background: none;
 }
 
